syntax = "proto3";

package pb;

option go_package = "github.com/bwen19/blog/grpc/pb";

message RefreshInfo {
    bool refreshable = 1;
}

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string avatar = 4;
    string intro = 5;
    string role = 6;
}

message UserItem {
    int64 id = 1;
    string username = 2;
    string avatar = 3;
}

message UserInfo {
    int64 id = 1;
    string username = 2;
    string avatar = 3;
    string intro = 4;
    int64 follower_count = 5;
    int64 following_count = 6;
    bool followed = 7;
}

message Category {
    int64 id = 1;
    string name = 2;
}

message Tag {
    int64 id = 1;
    string name = 2;
}
