syntax = "proto3";

package pb;

import "common_message.proto";

option go_package = "blog/server/pb";

message FollowUserRequest {
    int64 user_id = 1;
    bool is_like = 2;
}

message ListFollowsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
    int64 user_id = 3;
    bool is_follower = 4;
}
message ListFollowsResponse {
    int64 total = 1;
    repeated UserInfo users = 2;
}
